# ruc-grade-checker

./: .gitignore  CHANGELOG.md  README.md  config.py  db.py  debug.py  grade_fetcher.py  jw_system.py  monitor.py  notification.py  pyproject.toml  query_grades.py  requirements.txt
src/: cli.py  config.py  jw_system.py  utils.py
