[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ruc-grade-checker"
dynamic = ["version"]
description = "人大教务系统成绩查询工具"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Dawnfz-Lenfeng", email = "2912706234@qq.com" }]
dependencies = [
    "requests>=2.31.0",
    "selenium>=4.11.2",
    "webdriver-manager>=4.0.1",
    "pandas",
    "typer>=0.9.0",
    "rich>=13.0.0",
]
license = { text = "MIT" }

[project.scripts]
grade-checker = "src.cli:app"

[tool.hatch.version]
path = "src/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
